# ChangeLog for app-office/oooqs
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/oooqs/ChangeLog,v 1.30 2006/09/19 19:57:38 suka Exp $

*oooqs-2.1.0.1 (20 Sep 2006)

  20 Sep 2006; Andreas Proschofsky <suka@gentoo.org> +oooqs-2.1.0.1.ebuild:
  Revision bump, closes bug #148203

  25 Jun 2006; Simon Stelling <blubb@gentoo.org> oooqs-2.1.0.ebuild:
  stable on amd64

  23 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> oooqs-2.1.0.ebuild:
  Stable on x86 wrt bug #134952.

  22 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> oooqs-2.1.0.ebuild:
  Stable on sparc wrt #134952

  06 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> oooqs-2.1.0.ebuild:
  ppc stable, bug #134952

  02 Jun 2006; Andreas Proschofsky <suka@gentoo.org> oooqs-2.1.0.ebuild:
  Fix dependenies

*oooqs-2.1.0 (30 May 2006)

  30 May 2006; Andreas Proschofsky <suka@gentoo.org> +files/icon_names.diff,
  +files/oooqs2.patch, +oooqs-2.1.0.ebuild:
  Update, now based on oooqs2 1.0, ebuild and patches by Eric Ding
  <zze8zh602@sneakemail.com> in bug #123777

  21 Jan 2006; Marcus D. Hanwell <cryos@gentoo.org> oooqs-2.0.3-r2.ebuild:
  Stable on amd64, bug 119855.

  21 Jan 2006; Joseph Jezak <josejx@gentoo.org> oooqs-2.0.3-r2.ebuild:
  Marked ppc stable for bug #119855.

  17 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> oooqs-2.0.3-r2.ebuild:
  Stable on sparc directly wrt OO 2.0.0

  07 Jan 2006; Carsten Lohrke <carlo@gentoo.org> oooqs-2.0.3-r2.ebuild:
  QA: need-kde() needs to be called after R/DEPEND.

  05 Dec 2005; Mark Loeser <halcy0n@gentoo.org> oooqs-2.0.3-r2.ebuild:
  Stable on x86; bug #113950

*oooqs-2.0.3-r2 (30 Oct 2005)

  30 Oct 2005; Andreas Proschofsky <suka@gentoo.org> +files/oooqs-20.patch,
  +oooqs-2.0.3-r2.ebuild:
  New release, with some fixes to work with OpenOffice.org 2.0.0

  24 Sep 2005; Andreas Proschofsky <suka@gentoo.org> files/fixxooo.patch: