@@ -8,18 +8,18 @@ RMD160 c3b06851cc7159c521defa03bdfdb4eafc24aed9 files/oooqs2.patch 364
 SHA256 09485edd2f6f013ecc07c098bcfbc76cebfb1dfc6622fa34c4d820148b23d69b files/oooqs2.patch 364
 DIST oooqs2-1.0.1.tar.gz 588146 RMD160 97003ce2671bc487292d0258fdab8d2ff4a89e45 SHA1 5d9be8ba7344f6846954240e0135af41a927b2fe SHA256 8f234e83a8c4c1343196022b1d42bac3cb4c362cdd6bebe6ee7b0ef0855fce6f
 DIST oooqs2-1.0.tar.gz 584935 RMD160 cade4f58572abd2b5eba2897c020e84e4ee6b8de SHA1 4f938e2051ea398c92c4dc75570cd5972d3834e9 SHA256 482098ccd1d1eeb503ec1a16e9e7d291ad5c0a26b9d4f26199a57a9371e4ca0e
-EBUILD oooqs-2.1.0.1.ebuild 892 RMD160 bf2df2cdd94301abfb8ea02169fb013d1fbeb9f3 SHA1 60f5593ccfc755b4cb79e73aaded07cc30f09aea SHA256 ef6046ccbd398d235d7f7c3e5723f821a85f878c1f43e9559122db4a64ac2a48
-MD5 a177c1d3488737eea385916d926a1ba3 oooqs-2.1.0.1.ebuild 892
-RMD160 bf2df2cdd94301abfb8ea02169fb013d1fbeb9f3 oooqs-2.1.0.1.ebuild 892
-SHA256 ef6046ccbd398d235d7f7c3e5723f821a85f878c1f43e9559122db4a64ac2a48 oooqs-2.1.0.1.ebuild 892
-EBUILD oooqs-2.1.0.ebuild 885 RMD160 972a9555b61c3b7b483398c318a324d5f7c90872 SHA1 3560cf15f0f6e9dce6fe00501b676e46ea1c2c08 SHA256 fd394832e7609eae3635e1d1d6579340b8d6deea66ed3f31dbdaf5d8251a3aaf
-MD5 9ca622e047e682ff72ed8476959fd08a oooqs-2.1.0.ebuild 885
-RMD160 972a9555b61c3b7b483398c318a324d5f7c90872 oooqs-2.1.0.ebuild 885
-SHA256 fd394832e7609eae3635e1d1d6579340b8d6deea66ed3f31dbdaf5d8251a3aaf oooqs-2.1.0.ebuild 885
-MISC ChangeLog 3630 RMD160 7954291c9ec42cbafa19864d03b25feae1323a91 SHA1 263d6860c1bdacdd131b4a1eab8b6d6951efb533 SHA256 1052b2df14d0b0e21da9630086b473aed0ef17b89f00e683c669cd0ffd06a53c
-MD5 26d74783c3d628fe438ec87ac4345ddc ChangeLog 3630
-RMD160 7954291c9ec42cbafa19864d03b25feae1323a91 ChangeLog 3630
-SHA256 1052b2df14d0b0e21da9630086b473aed0ef17b89f00e683c669cd0ffd06a53c ChangeLog 3630
+EBUILD oooqs-2.1.0.1.ebuild 892 RMD160 91e98d9f439c7d18e472cba9757f694202f43d4d SHA1 927e262fc0dd7909a9df922fa62dc380b5b07807 SHA256 3cef21fdd30332f80eb0b6299705bcbfd946a9cbeeacdbcfe4caa840a6e0a1cf
+MD5 7b2f51223cf2478eef6e52dddd63510b oooqs-2.1.0.1.ebuild 892
+RMD160 91e98d9f439c7d18e472cba9757f694202f43d4d oooqs-2.1.0.1.ebuild 892
+SHA256 3cef21fdd30332f80eb0b6299705bcbfd946a9cbeeacdbcfe4caa840a6e0a1cf oooqs-2.1.0.1.ebuild 892
+EBUILD oooqs-2.1.0.ebuild 884 RMD160 56e99210fa2ae62581752c474ca61c23ee0366ca SHA1 604d1a463dfca7a4efa2bb191cb161a470e53c37 SHA256 eef92d21137207ae0864f049ebc01d66d517f615437834d4cb62d22609992190
+MD5 cb37917bf221d319f3cefc50b891a3a7 oooqs-2.1.0.ebuild 884
+RMD160 56e99210fa2ae62581752c474ca61c23ee0366ca oooqs-2.1.0.ebuild 884
+SHA256 eef92d21137207ae0864f049ebc01d66d517f615437834d4cb62d22609992190 oooqs-2.1.0.ebuild 884
+MISC ChangeLog 3783 RMD160 7fb0e05dff8bd04ca91cc367672a6ec90efd929b SHA1 89df6e8c8f468db0cdc844ba338e5ccf50771b4d SHA256 430d62d86c00ee950e9724d124f34995487f41763f1f4efcd26d601eb21e4e9b
+MD5 9a2b717fd17f54ba4caf41ffd8c5bb7a ChangeLog 3783
+RMD160 7fb0e05dff8bd04ca91cc367672a6ec90efd929b ChangeLog 3783
+SHA256 430d62d86c00ee950e9724d124f34995487f41763f1f4efcd26d601eb21e4e9b ChangeLog 3783
 MISC metadata.xml 269 RMD160 f1fa3d5d86abac63c26a156048c01ba6307f8c3c SHA1 05cceefb21f5fcb637062dd2c5747c180e85ac07 SHA256 655a688ac5c1289ebe6d9206117e32f98461a3f852f898e158090f9154c59d68
 MD5 d89f6d524fdd9cce162c5959fa9fed1b metadata.xml 269
 RMD160 f1fa3d5d86abac63c26a156048c01ba6307f8c3c metadata.xml 269
